@@ -34,6 +34,9 @@ type config struct {
 
 	// Enable CRI flags parsing (to be switched to default in 7.0)
 	CRIFlags bool `config:"cri.parse_flags"`
+
+	// Fore CRI format (don't perform autodetection)
+	CRIForce bool `config:"cri.force"`
 }
 
 type containers struct {
